# metadat

./: Cargo.toml  README.md  metadata.json
src/: main.rs
