[package]
name = "metadat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink_metadata = "3"
ink_primitives = "3"

contract-transcode = "0"

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"