[package]
name = "metadat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink_metadata = { git = "https://github.com/paritytech/ink", branch = "cl/runtime-metadata" }
ink_primitives = { git = "https://github.com/paritytech/ink", branch = "cl/runtime-metadata" }
scale-info = { git = "https://github.com/paritytech/scale-info", branch = "aj/custom-meta-types" }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"